# cuava-beacon-decoder

./: Cargo.toml  README.md  cuava-receiver.grc  demodulated-beacon.raw
bincode/: Cargo.toml  readme.md
bincode/src/: lib.rs
src/: eps.rs  main.rs  objects.rs  trxvu.rs
src/adcs/: enums.rs  mod.rs  structs.rs  telemetry.rs
